test/tests/stages/8_loops/valid/extra_credit/post_exp_incr.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: product
                  CSingleInit: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  Int: 
                  None: 
            CS: 
              CFor: 
                TIdentifier: (null)
                CInitDecl: 
                  CVariableDeclaration: 
                    TIdentifier: i
                    CSingleInit: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    Int: 
                    None: 
                CBinary: 
                  CLessThan: 
                  CVar: 
                    TIdentifier: i
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 10
                    None: 
                  None: 
                CAssignment: 
                  CPostfix: 
                  None: 
                  CBinary: 
                    CAdd: 
                    CVar: 
                      TIdentifier: i
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CExpression: 
                          CAssignment: 
                            None: 
                            CVar: 
                              TIdentifier: product
                              None: 
                            CBinary: 
                              CAdd: 
                              CVar: 
                                TIdentifier: product
                                None: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 2
                                None: 
                              None: 
                            None: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: product
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
